--- a/example-md.ipynb
+++ b/example-md.ipynb
@@ -16,7 +16,7 @@
     "This notebook details steps towards running the whole mPHAT analysis with an MD simulation. Check our [Sphinx documentation](https://mphat.readthedocs.io) for more up-to-date information about each function.\n",
     "\n",
     "By Jeremy Leung\n",
-    "Last updated: Apr 13th, 2023"
+    "Last updated: Apr 17th, 2023"
    ]
   },
   {
@@ -79,7 +79,7 @@
     "        A list containing\n",
     "    \"\"\"\n",
     "    state_list = []\n",
-    "    for val in tqdm(input_array):\n",
+    "    for val in input_array:\n",
     "        if val[0] >= -180 and val[0] <= -45 and val[1] >= -55 and val[1] <= 30:  # Phi/Psi for Alpha Helix\n",
     "            state_list.append(0)\n",
     "        elif val[0] >= 165 and val[0] <= 180 and val[1] >= -55 and val[1] <= 30:\n",
@@ -228,12 +228,6 @@
     "    \"\"\"\n",
     "    # Other example for grouping multiple states into one.\n",
     "    for idx, val in enumerate(data):\n",
-    "        flipped_val = numpy.asarray(val, dtype=object)[::-1]\n",
-    "        for idx2, val2 in enumerate(flipped_val):\n",
-    "            val2[2] = dictionary[val2[2]]\n",
-    "            pathways[idx, idx2] = val2\n",
-    "            print(val2)\n",
-    "\n",
     "        # The following shows how you can \"merge\" multiple states into\n",
     "        # a single one.\n",
     "        flipped_val = numpy.asarray(val)[::-1]\n",
