Removing all if __init__ == "__main__" blocks
Signed-off-by: Jeremy Leung <jml230@pitt.edu>

--- a/example-we.ipynb
+++ b/example-we.ipynb
@@ -36,7 +36,7 @@
    "source": [
     "# Imports for all steps\n",
     "import argparse\n",
-    "from mphat import discretize, extract, match"
+    "from mphat import discretize, extract, match, mphat"
    ]
   },
   {
@@ -46,6 +46,24 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "markdown",
@@ -64,20 +82,26 @@
    "source": [
     "# Arguments for `discretize` step.\n",
     "discretize_args = argparse.Namespace(\n",
-    "    input_name='west.h5',  # Input data for state assignment. Something like 'dihedral.npy'.\n",
-    "    output_name='assign.h5',  # Output file name for the state assignment.\n",
-    "    assign_func='default_assign',  # Assign function that dictates how to assign states\n",
+    "    # Common and I/O\n",
+    "    we=True,  # Analyzing a WE simulation\n",
+    "    stats=True,  # Output results statistics\n",
+    "    debug=False,  # Debug mode\n",
+    "    out_dir='succ_traj',  # Name of directory to output the trajectories\n",
+    "    stride=1,  # Number of frames to output per WE tau interval\n",
     "    west_name='west.h5',  # Name of input HDF5 file (e.g., west.h5)\n",
-    "    assign_name='ANALYSIS/TEST/assign.h5',  # Name of output assign.h5 file\n",
-    "    rcfile='west.cfg', # west.cfg file\n",
+    "    assign_name='ANALYSIS/C7_EQ/assign.h5',  # Name of input assign.h5 file\n",
+    "    rcfile='west.cfg',  # west.cfg file\n",
+    "    input_name='west.h5',  # Input data for state assignment. Ignored for WE.\n",
+    "    output_name='assign.h5',  # Output file name for the state assignment. Ignored for WE.\n",
+    "    assign_func='default_assign',  # Assign function that dictates how to assign states\n",
     "    assign_args=argparse.Namespace(  # These are arguments for w_assign\n",
     "        verbosity='verbose',  # Verbose or debug\n",
     "        rcfile=\"west.cfg\",  # west.cfg\n",
     "        max_queue_length=None,\n",
-    "        we_h5filename='west.h5',  # west.h5 path\n",
+    "        we_h5filename='west.h5',  # west.h5 path. Should match west_name\n",
     "        construct_dataset=None,  # If you need some custom auxiliary dataset\n",
     "        dsspecs=None,\n",
-    "        output='assign.h5',  # Output file\n",
+    "        output='assign.h5',  # Output file. Should match assign_name.\n",
     "        subsample=None,\n",
     "        config_from_file=True,  # Read config from rcfile\n",
     "        scheme='TEST',  # Scheme name\n",
@@ -121,8 +145,17 @@
    "source": [
     "# Arguments for the `extract` step.\n",
     "extract_args = argparse.Namespace(\n",
+    "    # Common and I/O\n",
+    "    we=True,  # Analyzing a WE simulation\n",
+    "    stats=True,  # Output results statistics\n",
+    "    debug=False,  # Debug mode\n",
+    "    out_dir='succ_traj',  # Name of directory to output the trajectories\n",
+    "    stride=1,  # Number of frames to output per WE tau interval\n",
     "    west_name='west.h5',  # Name of input HDF5 file (e.g., west.h5)\n",
     "    assign_name='ANALYSIS/C7_EQ/assign.h5',  # Name of input assign.h5 file\n",
+    "    rcfile='west.cfg',  # west.cfg file\n",
+    "\n",
+    "    # Extract specific things\n",
     "    source_state_num=0,  # Index of the source state as defined in assign.h5.\n",
     "    target_state_num=1,  # Index of the target state as defined in assign.h5.\n",
     "    first_iter=1,  # First iteration to analyze. Inclusive\n",
@@ -132,7 +165,7 @@
     "    out_traj_ext='.nc',  # Extension of the segment files. Defaults to `seg{out_traj_ext}`.\n",
     "    out_state_ext='.ncrst',  # Extension of the restart files. Defaults to `seg{out_state_ext}`.\n",
     "    out_top='system.prmtop',  # Name of the parameter file. Name relative to `$WEST_SIM_ROOT/common_files`.\n",
-    "    out_dir='succ_traj',  # Name of directory to output the trajectories.\n",
+    "    extract_output=\"output.pickle\",  # Name of the pickle file to be outputted.\n",
     "    hdf5=False,  # Enable if trajectories are saved with the HDF5 Framework in WESTPA.\n",
     "    rewrite_weights=False,  # Option to zero out the weights of all segments that are not a successful trajectory.\n",
     "    pcoord=True,  # Option to output the pcoord into the `output.pickle`.\n",
@@ -178,18 +211,23 @@
    "source": [
     "# Arguments for the `match` step.\n",
     "pattern_args = argparse.Namespace(\n",
-    "    input_pickle='succ_traj/output.pickle',  # Input file name of the pickle from `extract.py`\n",
-    "    west_name='multi.h5',  # Name of input HDF5 file (e.g., west.h5)\n",
+    "    we=True,  # Analyzing a WE simulation\n",
+    "    stats=True,  # Output results statistics\n",
+    "    out_dir='succ_traj',  # Name of directory to output the trajectories\n",
+    "    input_pickle='succ_traj/output.pickle',  # Input file name of the pickle from `mphat.extract`\n",
+    "    output_pickle='succ_traj/pathways.pickle',  # Output file name of the new reassigned pathways from `mphat.match`\n",
+    "    west_name='west.h5',  # Name of input HDF5 file (e.g., west.h5)\n",
     "    assign_name='ANALYSIS/ALL/assign.h5',  # Name of input assign.h5 file\n",
-    "    dmatrix_remake=True,  # Enable to remake the distance Matrix\n",
+    "    reassign_method='reassign_identity',  # Reassign method. Could be a module to be loaded\n",
+    "    subsequence=True,  # Use the longest common subsequence metric. False for longest common substring.\n",
+    "    dmatrix_remake=True,  # Enable to remake the distance matrix. If false, will proceed to load `dmatrix_save`.\n",
     "    dmatrix_save='distmap.npy',  # If dmatrix_remake is False, load this file instead. Assumed located in {out_dir}.\n",
     "    dendrogram_threshold=0.5,  # Threshold for the Dendrogram\n",
     "    dendrogram_show=True,  # Show the Dendrogram using plt.show()\n",
-    "    out_dir='succ_traj',  # Output for the distance Matrix\n",
-    "    cl_output='succ_traj/cluster_labels.npy',  # Output path for cluster labels\n",
-    "    file_pattern='west_succ_c{}.h5',  # Pattern to name cluster files\n",
     "    clusters=None,  # Cluster index to output... otherwise None --> All\n",
-    "    reassign_method='reassign_identity',  # Reassign method. Could be a module to be loaded.\n",
+    "    cl_output='succ_traj/cluster_labels.npy',  # Output path for cluster labels\n",
+    "    export_h5=True,  # Export H5 files\n",
+    "    file_pattern='west_succ_c{}.h5',  # Pattern to name cluster files\n",
     ")"
    ]
   },
@@ -203,6 +241,123 @@
     "# Run discretize with the parameters defined in the cell above.\n",
     "match.main(match_args)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Run All"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "unterminated string literal (detected at line 53) (912778092.py, line 53)",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;36m  Cell \u001B[0;32mIn[1], line 53\u001B[0;36m\u001B[0m\n\u001B[0;31m    input_pickle=f'{}/{extract_output,  # Input file name of the pickle from `mphat.extract`\u001B[0m\n\u001B[0m                 ^\u001B[0m\n\u001B[0;31mSyntaxError\u001B[0m\u001B[0;31m:\u001B[0m unterminated string literal (detected at line 53)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# For calling all steps directly. Note all parameters are specified manually here.\n",
+    "import argparse\n",
+    "from mphat.mphat import main\n",
+    "\n",
+    "all_args = argparse.Namespace(\n",
+    "    # Common Parameters\n",
+    "    out_dir=\"succ_traj\",  # Name of directory to output the trajectories.\n",
+    "    debug=False,  # Debug mode\n",
+    "    west_name='west.h5',  # Name of input HDF5 file (e.g., west.h5)\n",
+    "    assign_name='ANALYSIS/TEST/assign.h5',  # Name of output assign.h5 file\n",
+    "    rcfile='west.cfg',  # west.cfg file\n",
+    "    we=True,  # Analyzing a WE simulation.\n",
+    "\n",
+    "    # Discretize Parameters\n",
+    "    input_name='dihedral.npy',  # Input data for state assignment. Something like 'dihedral.npy'.\n",
+    "    output_name='discretized.npy',  # Output file name for the state assignment.\n",
+    "    assign_func='assign_func',  # Assign function that dictates how to assign states\n",
+    "    assign_args=argparse.Namespace(  # These are arguments for w_assign\n",
+    "        verbosity='verbose',  # Verbose or debug\n",
+    "        rcfile='west.cfg',  # west.cfg\n",
+    "        max_queue_length=None,\n",
+    "        we_h5filename='west.h5',  # west.h5 path\n",
+    "        construct_dataset=None,  # If you need some custom auxiliary dataset\n",
+    "        dsspecs=None,\n",
+    "        output='assign.h5',  # Output file\n",
+    "        subsample=None,\n",
+    "        config_from_file=True,  # Read config from rcfile\n",
+    "        scheme='TEST',  # Scheme name\n",
+    "    ),\n",
+    "\n",
+    "    # Extract Parameters\n",
+    "    # Note west_name and assign_name are repeated from above and removed\n",
+    "    source_state_num=0,  # Index of the source state as defined in assign.h5.\n",
+    "    target_state_num=1,  # Index of the target state as defined in assign.h5.\n",
+    "    first_iter=1,  # First iteration to analyze. Inclusive\n",
+    "    last_iter=200,  # Last iteration to analyze. Inclusive. 0 implies it will analyze all labeled iterations.\n",
+    "    trace_basis=True,  # Option to analyze each successful trajectory up till its basis state.\n",
+    "    out_traj=False,  # Option to output trajectory files into `out_dir`. Will take much longer.\n",
+    "    out_traj_ext=\".nc\",  # Extension of the segment files. Defaults to `seg{out_traj_ext}`.\n",
+    "    out_state_ext=\".ncrst\",  # Extension of the restart files. Defaults to `seg{out_state_ext}`.\n",
+    "    out_top=\"system.prmtop\",  # Name of the parameter file. Name relative to `$WEST_SIM_ROOT/common_files`.\n",
+    "    hdf5=False,  # Enable if trajectories are saved with the HDF5 Framework in WESTPA.\n",
+    "    rewrite_weights=False,  # Option to zero out the weights of all segments that are not a successful trajectory.\n",
+    "    pcoord=True,  # Option to output the pcoord into the `output.pickle`.\n",
+    "    auxdata=['phi', 'psi'],  # Additional auxiliary data to save into `output.pickle`.\n",
+    "    use_ray=False,  # Enable Ray.\n",
+    "    threads=0,  # How many Ray threads/actors to use. Defaults to 0, which wil use all auto-detected resources.\n",
+    "    extract_output=\"output.pickle\",  # Name of the pickle file to be outputted.\n",
+    "\n",
+    "\n",
+    "    # Match Parameters\n",
+    "    # Note west_name, assign_name and out_dir are repeated from above and removed\n",
+    "    input_pickle='succ_traj/output.pickle',  # Input file name of the pickle from `mphat.extract`\n",
+    "    output_pickle='succ_traj/pathways.pickle',  # Output file name of the new reassigned pathways from `mphat.match`\n",
+    "    reassign_method='reassign_identity',  # Reassign method. Could be a module to be loaded\n",
+    "    subsequence=True,  # Use the longest common subsequence metric. False for longest common substring.\n",
+    "    dmatrix_remake=True,  # Enable to remake the distance matrix. If false, will proceed to load `dmatrix_save`.\n",
+    "    dmatrix_save='distmap.npy',  # If dmatrix_remake is False, load this file instead. Assumed located in {out_dir}.\n",
+    "    dendrogram_threshold=0.5,  # Threshold for the Dendrogram\n",
+    "    dendrogram_show=True,  # Show the Dendrogram using plt.show()\n",
+    "    clusters=None,  # Cluster index to output... otherwise None --> All\n",
+    "    cl_output='succ_traj/cluster_labels.npy',  # Output path for cluster labels\n",
+    "    export_h5=True,  # Export H5 files\n",
+    "    file_pattern='west_succ_c{}.h5',  # Pattern to name cluster files\n",
+    ")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-15T16:58:35.059516Z",
+     "start_time": "2023-05-15T16:58:35.050015Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "mphat.main(all_args)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
