Update jupyter notebooks
Signed-off-by: Jeremy Leung <jml230@pitt.edu>

--- a/example-we.ipynb
+++ b/example-we.ipynb
@@ -16,7 +16,7 @@
     "This notebook details steps towards running the whole mPHAT analysis with a WE simulation. Check our [Sphinx documentation](https://mphat.readthedocs.io) for more up-to-date information about each function.\n",
     "\n",
     "By Jeremy Leung\n",
-    "Last updated: Apr 13th, 2023"
+    "Last updated: May 15th, 2023"
    ]
   },
   {
@@ -38,23 +38,6 @@
     "import argparse\n",
     "from mphat import discretize, extract, match, mphat"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "843b6dab",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false
-   }
   },
   {
    "cell_type": "code",
@@ -262,17 +245,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "unterminated string literal (detected at line 53) (912778092.py, line 53)",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;36m  Cell \u001B[0;32mIn[1], line 53\u001B[0;36m\u001B[0m\n\u001B[0;31m    input_pickle=f'{}/{extract_output,  # Input file name of the pickle from `mphat.extract`\u001B[0m\n\u001B[0m                 ^\u001B[0m\n\u001B[0;31mSyntaxError\u001B[0m\u001B[0;31m:\u001B[0m unterminated string literal (detected at line 53)\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "# For calling all steps directly. Note all parameters are specified manually here.\n",
     "import argparse\n",
@@ -332,6 +306,7 @@
     "    subsequence=True,  # Use the longest common subsequence metric. False for longest common substring.\n",
     "    dmatrix_remake=True,  # Enable to remake the distance matrix. If false, will proceed to load `dmatrix_save`.\n",
     "    dmatrix_save='distmap.npy',  # If dmatrix_remake is False, load this file instead. Assumed located in {out_dir}.\n",
+    "    dmatrix_parallel=-1,  # Number of jobs to submit for distance matrix calculation. Set to -1 to use everything.\n",
     "    dendrogram_threshold=0.5,  # Threshold for the Dendrogram\n",
     "    dendrogram_show=True,  # Show the Dendrogram using plt.show()\n",
     "    clusters=None,  # Cluster index to output... otherwise None --> All\n",
@@ -341,11 +316,7 @@
     ")"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-05-15T16:58:35.059516Z",
-     "start_time": "2023-05-15T16:58:35.050015Z"
-    }
+    "collapsed": false
    }
   },
   {
