--- a/example-md.ipynb
+++ b/example-md.ipynb
@@ -16,8 +16,15 @@
     "This notebook details steps towards running the whole mPHAT analysis with an MD simulation. Check our [Sphinx documentation](https://mphat.readthedocs.io) for more up-to-date information about each function.\n",
     "\n",
     "By Jeremy Leung\n",
-    "Last updated: Apr 17th, 2023"
+    "Last updated: May 17th, 2023"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "markdown",
@@ -36,6 +43,7 @@
    "source": [
     "# Imports for all steps\n",
     "import argparse\n",
+    "import numpy\n",
     "from mphat import discretize, extract, match"
    ]
   },
@@ -103,6 +111,11 @@
    "source": [
     "# Arguments for `discretize` step.\n",
     "discretize_args = argparse.Namespace(\n",
+    "    we=False,  # Doing standard simulations\n",
+    "    stride=1,  # Loading at stride=1. Increase to add more frames.\n",
+    "    stats=True,  # Output results statistics\n",
+    "    debug=False,  # Debug mode\n",
+    "    out_dir='succ_traj',  # Name of directory to output the trajectories\n",
     "    input_name='dihedral.npy',  # Input data for state assignment. Something like 'dihedral.npy'.\n",
     "    output_name='states.npy',  # Output file name for the state assignment.\n",
     "    assign_func='assign_dih',  # Assign function that dictates how to assign states\n",
@@ -145,18 +158,19 @@
    "source": [
     "# Arguments for the `extract` step.\n",
     "extract_args = argparse.Namespace(\n",
-    "    assign_name='states.npy',  # Name of input assign.h5 file\n",
+    "    we=False,  # Doing standard simulations\n",
+    "    stride=1,  # Loading at stride=1. Increase to add more frames.\n",
+    "    stats=True,  # Output results statistics\n",
+    "    debug=False,  # Debug mode\n",
+    "    out_dir='succ_traj',  # Name of directory to output the trajectories\n",
+    "    extract_input='states.npy',  # Name of input assign.h5 file\n",
+    "    extract_output='output.pickle',  # Name of input assign.h5 file\n",
+    "\n",
     "    source_state_num=0,  # Index of the source state as defined in assign_name.\n",
     "    target_state_num=1,  # Index of the target state as defined in assign_name.\n",
     "    trace_basis=True,  # Option to analyze each successful trajectory up till its basis state.\n",
-    "    out_traj=False,  # Option to output trajectory files into `out_dir`. Will take much longer.\n",
-    "    out_traj_ext='.nc',  # Extension of the segment files. Defaults to `seg{out_traj_ext}`.\n",
-    "    out_state_ext='.ncrst',  # Extension of the restart files. Defaults to `seg{out_state_ext}`.\n",
-    "    out_top='system.prmtop',  # Name of the parameter file. Name relative to `$WEST_SIM_ROOT/common_files`.\n",
-    "    out_dir='succ_traj',  # Name of directory to output the trajectories.\n",
-    "    auxdata=['phi', 'psi'],  # Additional auxiliary data to save into `output.pickle`.\n",
-    "    use_ray=False,  # Enable Ray.\n",
-    "    threads=0,  # How many Ray threads/actors to use. Defaults to 0, which wil use all auto-detected resources.\n",
+    "    pcoord=False,  # Option to output extra datasets\n",
+    "    feature_stride=1,  # Option to stride `pcoord`\n",
     ")"
    ]
   },
@@ -258,18 +272,21 @@
    "outputs": [],
    "source": [
     "# Arguments for the `match` step.\n",
-    "pattern_args = argparse.Namespace(\n",
+    "match_args = argparse.Namespace(\n",
+    "    we=False,  # Doing standard simulations\n",
+    "    stride=1,  # Loading at stride=1. Increase to add more frames.\n",
     "    input_pickle='succ_traj/output.pickle',  # Input file name of the pickle from `extract.py`\n",
-    "    assign_name='ANALYSIS/ALL/assign.h5',  # Name of input assign.h5 file\n",
+    "    output_pickle='succ_traj/pathways.pickle',  # Output file name of the new reassigned pathways from `mphat.match`\n",
+    "    reassign_method='reassign_custom',  # Reassign method. Could be a module to be loaded.\n",
+    "    subsequence=True,  # Use the longest common subsequence metric. False for longest common substring.\n",
     "    dmatrix_remake=True,  # Enable to remake the distance Matrix\n",
     "    dmatrix_save='distmap.npy',  # If dmatrix_remake is False, load this file instead. Assumed located in {out_dir}.\n",
+    "    dmatrix_parallel=-1,  # Number of jobs to submit for distance matrix calculation. Set to -1 to use everything.\n",
     "    dendrogram_threshold=0.5,  # Threshold for the Dendrogram\n",
     "    dendrogram_show=True,  # Show the Dendrogram using plt.show()\n",
     "    out_dir='succ_traj',  # Output for the distance Matrix\n",
     "    cl_output='succ_traj/cluster_labels.npy',  # Output path for cluster labels\n",
-    "    file_pattern='west_succ_c{}.h5',  # Pattern to name cluster files\n",
     "    clusters=None,  # Cluster index to output... otherwise None --> All\n",
-    "    reassign_method='reassign_custom',  # Reassign method. Could be a module to be loaded.\n",
     ")"
    ]
   },
@@ -283,6 +300,15 @@
     "# Run discretize with the parameters defined in the cell above.\n",
     "match.main(match_args)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
