Mass renaming from mphat to lpath...

--- a/example-md.ipynb
+++ b/example-md.ipynb
@@ -5,7 +5,7 @@
    "id": "5ec06693",
    "metadata": {},
    "source": [
-    "# Example WE Notebook for mPHAT"
+    "# Example WE Notebook for lpath"
    ]
   },
   {
@@ -13,7 +13,7 @@
    "id": "16e05d9c",
    "metadata": {},
    "source": [
-    "This notebook details steps towards running the whole mPHAT analysis with an MD simulation. Check our [Sphinx documentation](https://mphat.readthedocs.io) for more up-to-date information about each function.\n",
+    "This notebook details steps towards running the whole lpath analysis with an MD simulation. Check our [Sphinx documentation](https://lpath.readthedocs.io) for more up-to-date information about each function.\n",
     "\n",
     "By Jeremy Leung\n",
     "Last updated: May 17th, 2023"
@@ -44,7 +44,7 @@
     "# Imports for all steps\n",
     "import argparse\n",
     "import numpy\n",
-    "from mphat import discretize, extract, match"
+    "from lpath import discretize, extract, match"
    ]
   },
   {
@@ -276,7 +276,7 @@
     "    we=False,  # Doing standard simulations\n",
     "    stride=1,  # Loading at stride=1. Increase to add more frames.\n",
     "    input_pickle='succ_traj/output.pickle',  # Input file name of the pickle from `extract.py`\n",
-    "    output_pickle='succ_traj/pathways.pickle',  # Output file name of the new reassigned pathways from `mphat.match`\n",
+    "    output_pickle='succ_traj/pathways.pickle',  # Output file name of the new reassigned pathways from `lpath.match`\n",
     "    reassign_method='reassign_custom',  # Reassign method. Could be a module to be loaded.\n",
     "    subsequence=True,  # Use the longest common subsequence metric. False for longest common substring.\n",
     "    dmatrix_remake=True,  # Enable to remake the distance Matrix\n",
