--- a/example-we.ipynb
+++ b/example-we.ipynb
@@ -5,7 +5,7 @@
    "id": "5ec06693",
    "metadata": {},
    "source": [
-    "# Example WE Notebook for mPHAT"
+    "# Example WE Notebook for lpath"
    ]
   },
   {
@@ -13,7 +13,7 @@
    "id": "16e05d9c",
    "metadata": {},
    "source": [
-    "This notebook details steps towards running the whole mPHAT analysis with a WE simulation. Check our [Sphinx documentation](https://mphat.readthedocs.io) for more up-to-date information about each function.\n",
+    "This notebook details steps towards running the whole lpath analysis with a WE simulation. Check our [Sphinx documentation](https://lpath.readthedocs.io) for more up-to-date information about each function.\n",
     "\n",
     "By Jeremy Leung\n",
     "Last updated: May 15th, 2023"
@@ -36,7 +36,7 @@
    "source": [
     "# Imports for all steps\n",
     "import argparse\n",
-    "from mphat import discretize, extract, match, mphat"
+    "from lpath import discretize, extract, match, lpath"
    ]
   },
   {
@@ -197,8 +197,8 @@
     "    we=True,  # Analyzing a WE simulation\n",
     "    stats=True,  # Output results statistics\n",
     "    out_dir='succ_traj',  # Name of directory to output the trajectories\n",
-    "    input_pickle='succ_traj/output.pickle',  # Input file name of the pickle from `mphat.extract`\n",
-    "    output_pickle='succ_traj/pathways.pickle',  # Output file name of the new reassigned pathways from `mphat.match`\n",
+    "    input_pickle='succ_traj/output.pickle',  # Input file name of the pickle from `lpath.extract`\n",
+    "    output_pickle='succ_traj/pathways.pickle',  # Output file name of the new reassigned pathways from `lpath.match`\n",
     "    west_name='west.h5',  # Name of input HDF5 file (e.g., west.h5)\n",
     "    assign_name='ANALYSIS/ALL/assign.h5',  # Name of input assign.h5 file\n",
     "    reassign_method='reassign_identity',  # Reassign method. Could be a module to be loaded\n",
@@ -250,7 +250,7 @@
    "source": [
     "# For calling all steps directly. Note all parameters are specified manually here.\n",
     "import argparse\n",
-    "from mphat.mphat import main\n",
+    "from lpath.lpath import main\n",
     "\n",
     "all_args = argparse.Namespace(\n",
     "    # Common Parameters\n",
@@ -300,8 +300,8 @@
     "\n",
     "    # Match Parameters\n",
     "    # Note west_name, assign_name and out_dir are repeated from above and removed\n",
-    "    input_pickle='succ_traj/output.pickle',  # Input file name of the pickle from `mphat.extract`\n",
-    "    output_pickle='succ_traj/pathways.pickle',  # Output file name of the new reassigned pathways from `mphat.match`\n",
+    "    input_pickle='succ_traj/output.pickle',  # Input file name of the pickle from `lpath.extract`\n",
+    "    output_pickle='succ_traj/pathways.pickle',  # Output file name of the new reassigned pathways from `lpath.match`\n",
     "    reassign_method='reassign_identity',  # Reassign method. Could be a module to be loaded\n",
     "    subsequence=True,  # Use the longest common subsequence metric. False for longest common substring.\n",
     "    dmatrix_remake=True,  # Enable to remake the distance matrix. If false, will proceed to load `dmatrix_save`.\n",
@@ -324,7 +324,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "mphat.main(all_args)"
+    "lpath.main(all_args)"
    ],
    "metadata": {
     "collapsed": false
