--- a/example-md.ipynb
+++ b/example-md.ipynb
@@ -27,6 +27,15 @@
    }
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "markdown",
    "id": "5367e35d",
    "metadata": {},
