Add networkx as a dependency

--- a/example-we.ipynb
+++ b/example-we.ipynb
@@ -222,7 +222,7 @@
    "outputs": [],
    "source": [
     "# Run discretize with the parameters defined in the cell above.\n",
-    "match.main(match_args)"
+    "match.main(pattern_args)"
    ]
   },
   {
